# AI-Poisson-detector-

./: README.md  __init__ (1).py  __init__ (2).py  __init__ (3).py  __init__.py  classifier.py  extractor.py  pipeline.py  results.py  shap_explainer.py  transformer.py
files/: README.md  ai_poisson_detector.py  detect.py  profiles.json  train.py
files/poisson-guard/: pyproject.toml  requirements.txt
files/poisson-guard/artifacts/: baselines.json  population.json
files/poisson-guard/poissonguard/: __init__.py  bayes_rate.py  bucketing.py  dashboard.py  detector.py  drift_guard.py  evaluation.py  fusion.py  generators.py  legacy.py  metrics.py  schemas.py  serving.py  shape_tests.py  training.py
files/poisson-guard/poissonguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
files/poisson-guard/scripts/: detect.py  evaluate.py  train.py
files/poisson-guard/tests/: test_bayes_rate.py  test_bucketing.py  test_dashboard.py  test_detector.py  test_drift_guard.py  test_evaluation.py  test_fusion.py  test_generators.py  test_legacy.py  test_metrics.py  test_schemas.py  test_serving.py  test_shape_tests.py  test_training.py
