[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poissonguard"
version = "0.1.0"
description = "Poisson-process anomaly detector hardened against adversarial baseline poisoning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["poissonguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
